[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Sorter.gd" type="Script" id=1]
[ext_resource path="res://Assets/sort_background_2.png" type="Texture" id=2]
[ext_resource path="res://Assets/pixelfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/ingame_menu.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/money_anim.tscn" type="PackedScene" id=5]


[node name="Sorter" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Crates" type="Node2D" parent="."]

[node name="YSort" type="YSort" parent="."]

[node name="Spawn Timer" type="Timer" parent="."]
autostart = true

[node name="Game Timer" type="Timer" parent="."]
autostart = true

[node name="Crate Timer" type="Timer" parent="."]
wait_time = 3.3
autostart = true

[node name="Time" type="Label" parent="."]
margin_left = -30.0
margin_top = 40.0
margin_right = -10.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 3 )
text = "60
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
margin_left = 12.0
margin_top = 40.0
margin_right = 32.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 3 )
text = "0
"
align = 1

[node name="Menu" parent="." instance=ExtResource( 4 )]
visible = false
margin_top = -32.0
margin_bottom = -32.0

[node name="money_anim" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, 19 )
[connection signal="timeout" from="Spawn Timer" to="." method="_on_Spawn_Timer_timeout"]
[connection signal="timeout" from="Game Timer" to="." method="_on_Game_Timer_timeout"]
[connection signal="timeout" from="Crate Timer" to="." method="_on_Crate_Timer_timeout"]
